# hedonic-pricing-curitiba-II

./: .codespell-ignore-words  .gitignore  .pre-commit-config.yaml  README.md  myst.yml  package.json  pyproject.toml
documents/: myst.yml  paper.md  refs.bib  task_documents.py
src/hedonic_analysis/: config.py
src/hedonic_analysis/analysis/: pca_housing.py  rosen_regression.py  task_interactive_map.py  task_pca_housing.py  task_rosen_regression.py
src/hedonic_analysis/data/: geocode_cache.parquet  green_area.xlsx  info_neighborhoods.xlsx  pca.xlsx  private_schools.xlsx  shopping_centers.xlsx
src/hedonic_analysis/data/Cemiteries/: CEMITERIOS.dbf  CEMITERIOS.sbn  CEMITERIOS.sbx  CEMITERIOS.shp  CEMITERIOS.shx
src/hedonic_analysis/data/Cicleroutes/: CICLORROTA.dbf  CICLORROTA.sbn  CICLORROTA.sbx  CICLORROTA.shp  CICLORROTA.shx
src/hedonic_analysis/data/Cicleways/: CICLOVIA_OFICIAL.dbf  CICLOVIA_OFICIAL.sbn  CICLOVIA_OFICIAL.sbx  CICLOVIA_OFICIAL.shp  CICLOVIA_OFICIAL.shx
src/hedonic_analysis/data/Cidadania/: RUA_DA_CIDADANIA.dbf  RUA_DA_CIDADANIA.sbn  RUA_DA_CIDADANIA.sbx  RUA_DA_CIDADANIA.shp  RUA_DA_CIDADANIA.shx
src/hedonic_analysis/data/Dentist_units/: CENTRO_DE_ESPECIALIDADES_ODONTOLOGICAS.dbf  CENTRO_DE_ESPECIALIDADES_ODONTOLOGICAS.prj  CENTRO_DE_ESPECIALIDADES_ODONTOLOGICAS.sbn  CENTRO_DE_ESPECIALIDADES_ODONTOLOGICAS.sbx  CENTRO_DE_ESPECIALIDADES_ODONTOLOGICAS.shp  CENTRO_DE_ESPECIALIDADES_ODONTOLOGICAS.shx
src/hedonic_analysis/data/Emergency/: UNIDADE_DE_PRONTO_ATENDIMENTO.dbf  UNIDADE_DE_PRONTO_ATENDIMENTO.sbn  UNIDADE_DE_PRONTO_ATENDIMENTO.sbx  UNIDADE_DE_PRONTO_ATENDIMENTO.shp  UNIDADE_DE_PRONTO_ATENDIMENTO.shx
src/hedonic_analysis/data/Health_units/: UNIDADE_DE_SAUDE.dbf  UNIDADE_DE_SAUDE.sbn  UNIDADE_DE_SAUDE.sbx  UNIDADE_DE_SAUDE.shp  UNIDADE_DE_SAUDE.shx
src/hedonic_analysis/data/Hospitals/: HOSPITAL.dbf  HOSPITAL.sbn  HOSPITAL.sbx  HOSPITAL.shp  HOSPITAL.shx
src/hedonic_analysis/data/Irregular/: OCUPACAO_IRREGULAR.dbf  OCUPACAO_IRREGULAR.sbn  OCUPACAO_IRREGULAR.sbx  OCUPACAO_IRREGULAR.shp  OCUPACAO_IRREGULAR.shx
src/hedonic_analysis/data/Lakes/: HIDRO_LAGOS_LAGOAS_REPRESAS.dbf  HIDRO_LAGOS_LAGOAS_REPRESAS.sbn  HIDRO_LAGOS_LAGOAS_REPRESAS.sbx  HIDRO_LAGOS_LAGOAS_REPRESAS.shx
src/hedonic_analysis/data/Medical_units/: CENTRO_DE_ESPECIALIDADES_MEDICAS.dbf  CENTRO_DE_ESPECIALIDADES_MEDICAS.sbn  CENTRO_DE_ESPECIALIDADES_MEDICAS.sbx  CENTRO_DE_ESPECIALIDADES_MEDICAS.shp  CENTRO_DE_ESPECIALIDADES_MEDICAS.shx
src/hedonic_analysis/data/Railroads/: RRFSA_FERROVIAS.dbf  RRFSA_FERROVIAS.sbn  RRFSA_FERROVIAS.sbx  RRFSA_FERROVIAS.shp  RRFSA_FERROVIAS.shx
src/hedonic_analysis/data/Rivers/: HIDRO_RIOS_LN.dbf  HIDRO_RIOS_LN.sbn  HIDRO_RIOS_LN.sbx  HIDRO_RIOS_LN.shx
src/hedonic_analysis/data/Schools/: ESCOLA_MUNICIPAL.dbf  ESCOLA_MUNICIPAL.sbn  ESCOLA_MUNICIPAL.sbx  ESCOLA_MUNICIPAL.shp  ESCOLA_MUNICIPAL.shx
src/hedonic_analysis/data/Sport_leisure/: CENTRO_DE_ESPORTE_E_LAZER.dbf  CENTRO_DE_ESPORTE_E_LAZER.sbn  CENTRO_DE_ESPORTE_E_LAZER.sbx  CENTRO_DE_ESPORTE_E_LAZER.shp  CENTRO_DE_ESPORTE_E_LAZER.shx
src/hedonic_analysis/data/Squares/: PRACAS_E_JARDINETES.dbf  PRACAS_E_JARDINETES.sbn  PRACAS_E_JARDINETES.sbx  PRACAS_E_JARDINETES.shp  PRACAS_E_JARDINETES.shx
src/hedonic_analysis/data/Terminals/: TERMINAL_DE_TRANSPORTE.dbf  TERMINAL_DE_TRANSPORTE.sbn  TERMINAL_DE_TRANSPORTE.sbx  TERMINAL_DE_TRANSPORTE.shp  TERMINAL_DE_TRANSPORTE.shx
src/hedonic_analysis/data_management/: clean_housing.py  geocode_housing.py  merge_location_attributes.py  scrape_imovelweb.py  task_clean_housing.py  task_geocode_housing.py  task_merge_location_attributes.py
src/hedonic_analysis/final/: interactive_map.py  task_interactive_map.py
tests/: test_pipeline.py
tests/analysis/: test_interactive_map.py  test_pca_housing.py  test_rosen_regression.py
tests/data_management/: test_clean_housing.py  test_geocode_housing.py  test_merge_location_attributes.py
tests/final/: test_interactive_map.py
