# ======================================================================================
# Project metadata
# ======================================================================================

[project]
name = "hedonic_analysis"
description = "Hedonic pricing analysis of Curitiba's segmented real estate market"
requires-python = "==3.14"
dynamic = [ "version" ]
keywords = [
  "Hedonic Pricing",
  "Principal Component Analysis",
  "Spatial Econometrics",
  "Urban Economics",
  "Real Estate",
  "Market Segmentation",
]
classifiers = [
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
]
authors = [
  { name = "Lucas Salamuni", email = "lsalamun@smail.uni-koeln.de" },
]
maintainers = [
  { name = "Lucas Salamuni", email = "lsalamun@smail.uni-koeln.de" },
]
dependencies = [ "factor-analyzer>=0.5.1,<0.6", "folium>=0.20.0,<0.21", "pyshp>=3.0.3,<4" ]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.license]
text = "MIT"

[project.urls]
Github = "https://github.com/iame-uni-bonn/final-project-lsalamuni"
Tracker = "https://github.com/iame-uni-bonn/final-project-lsalamuni/issues"

# ======================================================================================
# Build system configuration
# ======================================================================================

[build-system]
requires = [ "hatchling", "hatch_vcs" ]
build-backend = "hatchling.build"

[tool.hatch.build.hooks.vcs]
version-file = "src/hedonic_analysis/_version.py"

[tool.hatch.build.targets.sdist]
exclude = [ "tests" ]
only-packages = true

[tool.hatch.build.targets.wheel]
only-include = [ "src" ]
sources = [ "src" ]

[tool.hatch.version]
source = "vcs"

[tool.hatch.metadata]
allow-direct-references = true

# ======================================================================================
# Pixi configuration
# ======================================================================================

[tool.pixi.workspace]
channels = [ "conda-forge" ]
platforms = [ "linux-64", "osx-64", "osx-arm64", "win-64" ]

[tool.pixi.dependencies]
jupyter-book = ">=2.0"
jupyterlab = "*"
nodejs = "*"
numpy = ">=2.4"
pandas = ">=2.2"
plotly = ">=6.5"
prek = "*"
pygraphviz = "*"
pytask = "*"
pytask-parallel = "*"
pytest = "*"
pytest-cov = "*"
pytest-xdist = "*"
python-kaleido = ">=1.1"
statsmodels = "*"
ty = "*"
pyarrow = ">=23.0.0,<24"
openpyxl = ">=3.1.5,<4"
scikit-learn = ">=1.8.0,<2"
matplotlib = ">=3.10.8,<4"
seaborn = ">=0.13.2,<0.14"
pyproj = ">=3.7.2,<4"

[tool.pixi.pypi-dependencies]
hedonic_analysis = { path = ".", editable = true }
pdbp = "*"
tabulate = "*"
selenium = ">=4.25"
undetected-chromedriver = "*"
beautifulsoup4 = "*"
geopy = ">=2.4"

[tool.pixi.tasks]
ty = { cmd = "ty check", description = "Check typing" }
view-paper = { cmd = "jupyter book start", description = "View the HTML paper in browser" }
view-pres = { cmd = "npx slidev documents/presentation.md", description = "View the presentation in browser" }

# ======================================================================================
# Pytask configuration
# ======================================================================================

[tool.pytask.ini_options]
paths = [ "./src/hedonic_analysis", "./documents" ]
pdbcls = "pdbp:Pdb"

# ======================================================================================
# Ruff configuration
# ======================================================================================

[tool.ruff]
target-version = "py314"
fix = true

[tool.ruff.lint]
select = [ "ALL" ]
extend-ignore = [
  "ANN",     # Missing type annotations
  "COM812",  # Conflict with ruff-format
  "D10",     # Missing docstrings
  "ISC001",  # Conflict with ruff-format
  "PLR0913", # Too many arguments in function definition
  "RET504",  # Don't force to calculate upon return
  "S101",    # Use of `assert` detected.
  "S301",    # pickle module is unsafe
  "TC001",   # Move application import into a type-checking block
  "TC002",   # Move third-party import into a type-checking block
  "TC003",   # Move standard library import into a type-checking block
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [ "D", "PD011" ]
"task_*.py" = [ "ANN", "ARG001", "S603" ]
"_version.py" = [ "UP007" ]

[tool.ruff.lint.pydocstyle]
convention = "google"

# ======================================================================================
# ty configuration
# ======================================================================================

[tool.ty.environment]
root = [ "." ]

[tool.ty.src]
include = [ "src/", "tests/" ]

[tool.ty.rules]
ambiguous-protocol-member = "error"
deprecated = "error"
division-by-zero = "error"
ignore-comment-unknown-rule = "error"
invalid-argument-type = "error"
invalid-ignore-comment = "error"
invalid-return-type = "error"
possibly-missing-attribute = "error"
possibly-missing-implicit-call = "error"
possibly-missing-import = "error"
possibly-unresolved-reference = "error"
redundant-cast = "error"
undefined-reveal = "error"
unresolved-global = "error"
unsupported-base = "error"
unused-ignore-comment = "error"
useless-overload-body = "error"

# ======================================================================================
# Miscellaneous tools configuration
# ======================================================================================

[tool.pytest.ini_options]
addopts = "--pdbcls=pdbp:Pdb"
filterwarnings = [  ]
markers = [
  "wip: Tests that are work-in-progress.",
  "unit: Flag for unit tests which target mainly a single function.",
  "integration: Flag for integration tests which may comprise of multiple unit tests.",
  "end_to_end: Flag for tests that cover the whole program.",
]
norecursedirs = [ "docs" ]

[tool.codespell]
ignore-words = ".codespell-ignore-words"
skip = "package-lock.json,node_modules,pixi.lock,.codespell-ignore-words"

[tool.yamlfix]
line_length = 88
none_representation = "null"
preserve_quotes = true
